crates/swc/tests/tsc-references/interfaces/interfacesExtendingClasses/interfaceExtendingClassWithProtecteds/input.ts/es5.1.normal/output.js
function _classCallCheck(instance, Constructor) {
    if (!(instance instanceof Constructor)) {
        throw new TypeError("Cannot call a class as a function");
    }
}
var Foo = function Foo() {
    "use strict";
    _classCallCheck(this, Foo);
};
var i;
var r = i.y;
var r2 = i.x; // error
